# lyrics

./: .buildinfo  .gitignore  01-intro.html  02-semiconductor.html  03-process.html  04-equipment.html  404.html  CONDUCT.html  CONTRIBUTING.html  README.md  alternatives.html  contributing.html  features.html  genindex.html  genius.py  help-typer.html  index.html  notebooks.html  objects.inv  release-notes.html  search.html  searchindex.js  sitemap.xml  sonar-project.properties  typer-cli.html
src/lyrics-api/: Dockerfile  Dockerfile-multistage  docker-compose.yaml  makefile  pyproject.toml  requirements.txt  setup.py  start.sh
src/lyrics-api/lyrics_api/: __init__.py  __main__.py  controller.py  model.py
src/lyrics-api/openapi/: openapi.yaml
src/python-consumer/: Dockerfile  pyproject.toml  requirements.txt  setup.py
src/python-consumer/python_consumer/: __init__.py  __main__.py  cmudictinstall.py  config.py  consumer.py  emit.py  genius.py  geniusLyrics.py  music.py  phonemes.py  strategies.py  throat.py  utils.py
src/tensorflow-consumer/: Dockerfile  pyproject.toml  requirements.txt  setup.py
src/tensorflow-consumer/tensorflow_consumer/: __init__.py  __main__.py  config.py  nmt.py  nmt_training.py  nmt_translate.py  phoneme2image.py  rnn_play.py  rnn_train.py  strategies.py  utils.py
src/tensorflow-consumer/tensorflow_consumer/generation/beatles/: rnn_play.py  rnn_train.py
src/tensorflow-consumer/tensorflow_consumer/translation/: nmt.py
src/tensorflow-consumer/tensorflow_consumer/translation/eng2spa/: eng2spa_training.py  eng2spa_translate.py  (+2 more)
(+195 files in other folders)
